feat: fully implement local and capture scope object wrappers feat: implement object sending and receiving